Quorum/Library/Tests/Actions/Pass/ChainingOtherClassMain.quorum
class Main
    action Main
        A a
        a:b:DoThing()
    end
end