Quorum/Library/Tests/Actions/Fail/FieldSoloAction.quorum
class Main
    DoSomething()

    action Main
    end

    action DoSomething
    end
end